--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ holder{
     display: flex;
     flex-wrap:wrap;
     flex-direction:row;
+	justify-content:center;
+	
+
+	
 }
 .item-1{
     width: 80px;
